--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
+<!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Static Blog</title>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
         <link href="./css/theme.css" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="./css/highlight/tomorrow-night.css">
+        <link rel="stylesheet" href="./css/highlight/tomorrow-night-eighties.css">
         <link rel="stylesheet" href="./css/fontello.css">
         <script src="./js/highlight.pack.js"></script>
         <script src="./js/marked.js"></script>
         <script>
-        var blogTitle = 'AzerothJS';
+        var blogTitle = '啄木鸟的博客';
 
         hljs.initHighlightingOnLoad();
         marked.setOptions({
@@ -74,21 +76,21 @@
 	    <div class="footer">
             <p>Created with <a href="http://github.com/huytd/azeroth-js">azeroth.js</a></p>
             <div class="social">
-                <a href="#"><i class="icon-facebook-squared"></i></a>
-                <a href="#"><i class="icon-twitter-squared"></i></a>
-                <a href="#"><i class="icon-linkedin-squared"></i></a>
-                <a href="#"><i class="icon-github-squared"></i></a>
-                <a href="#"><i class="icon-mail-alt"></i></a>
+                <a href="javascript:void(0);cript:void(0);"><i class="icon-twitter-squared"></i></a>
+                <a href="javascript:void(0);"><i class="icon-linkedin-squared"></i></a>
+                <a href="https://github.com/zuomuniao"><i class="icon-github-squared"></i></a>
+                <a href="mailto:ponyzhengwei@gmail.com"><i class="icon-mail-alt"></i></a>
             </div>
         </div>
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+            <!--如果需要统计访客，可以启用-->
+          // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          // })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'Insert-Your-GA-ID-Here', 'auto');
-          ga('send', 'pageview');
+          // ga('create', 'Insert-Your-GA-ID-Here', 'auto');
+          // ga('send', 'pageview');
         </script>
     </body>
 </html>
