--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </head>
     <body onload="startup()" onhashchange="launch()">
         <div class="header">
-            <a href="#home"><i class="icon icon-emo-coffee"></i> BLOG</a>
+            <a href="#home"><i class="icon icon-emo-coffee"></i>啄木鸟的博客</a>
         </div>
         <div class="container">
             <div class="main"></div>
